--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   line_icons: ^2.0.1
   syncfusion_officechart: ^19.2.48-beta
   flutter_charts: ^0.2.0
+  draw_graph: ^1.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
